adding html and css for highlights page

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	
+	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/aboutUs.css">
 
 	<title>TRAA Box Webpage</title>
@@ -33,7 +35,7 @@
 	</section>
 
 	<section class="history">
-		<h2 class="hidden">how TRAA was founded<h2>
+		<h2 class="hidden">how TRAA was founded</h2>
 	</section>
 
 	<section class="mission">
@@ -60,7 +62,7 @@
 	</section>
 
 	<footer id="main-footer"></footer>
-
+</main>
 
 	<script src="js/main.js"></script>
 </body>
